--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,135 @@
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&family=Itim&family=Lato&family=Montserrat:wght@600&family=Mulish&family=Noto+Serif:wght@700&family=Open+Sans:wght@300;600&family=Raleway:wght@200;600&display=swap");
+
+:root {
+  --primary: #6366f1;
+}
+
+* {
+  letter-spacing: 1px;
+  margin: 0px;
+  padding: 0px;
+  font-family: "EB Garamond", serif;
+}
+
+.main {
+  width: 100%;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 1200px;
+  margin: auto;
+  /* column-gap: 45px; */
+}
+
+.nav {
+  /* position: sticky;
+  top: 0px; */
+  display: flex;
+  background-color: var(--primary);
+  color: #fff;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px;
+  margin-bottom: 35px;
+}
+#search,
+#btn {
+  padding: 10px 20px;
+  color: var(--primary);
+  font-weight: bold;
+  letter-spacing: 1.5px;
+  outline: none;
+}
+#btn {
+  background-color: #fff;
+  padding: 11px 20px;
+  border: none;
+  border-left: 0.5px solid var(--primary);
+  border-right: 0.5px solid var(--primary);
+  cursor: pointer;
+}
+
+#resultMsg {
+  margin-bottom: 10px;
+  text-align: center;
+  color: var(--primary);
+  font-size: 30px;
+}
+
 .box {
-  border: 1px solid black;
+  text-align: center;
+  border: 1px solid var(--primary);
   margin: 20px;
+  margin-top: 30px;
+  width: 350px;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  border-radius: 1rem;
+  background-color: #fff;
+}
+
+.box:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 #img {
-  width: 250px;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  width: 100%;
+  height: 365px;
+  border: 1px solid black;
+}
+
+#movieName {
+  color: var(--primary);
+}
+.title,
+.overview {
+  padding: 10px;
+}
+
+#overviewHead {
+  margin-bottom: 10px;
+  color: var(--primary);
+}
+
+#green {
+  color: #00ff00;
+  font-weight: bold;
+}
+
+#red {
+  color: red;
+  font-weight: bold;
+}
+
+#star {
+  font-size: 12px;
+  padding-right: 2px;
+}
+
+p {
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: 1fr;
+    width: 330px;
+  }
+  .box {
+    width: 300px;
+    margin: 14px;
+    margin-top: 35px;
+  }
+  #search {
+    padding: 5px 10px;
+  }
+  #btn {
+    margin-left: 50px;
+    padding: 5px 10px;
+  }
 }
