--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@
   text-align: center;
   color: var(--primary);
   font-size: 30px;
+  letter-spacing: 1.5px;
 }
 
 .box {
@@ -134,5 +135,67 @@ p {
   #btn {
     margin-left: 50px;
     padding: 5px 10px;
+  }
+}
+
+#loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary);
+  font-size: 160px;
+}
+
+#loading {
+  font-size: 47px;
+  padding-right: 5px;
+  letter-spacing: 1.5px;
+}
+
+#dot1 {
+  animation: dot1;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 1s; */
+}
+
+@keyframes dot1 {
+  from {
+    color: var(--primary);
+  }
+  to {
+    color: red;
+  }
+}
+
+#dot2 {
+  animation: dot2;
+  animation-duration: 1.3s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 2s; */
+}
+
+@keyframes dot2 {
+  from {
+    color: var(--primary);
+  }
+  to {
+    color: green;
+  }
+}
+
+#dot3 {
+  animation: dot3;
+  animation-duration: 1.6s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 1s; */
+}
+
+@keyframes dot3 {
+  from {
+    color: var(--primary);
+  }
+  to {
+    color: blue;
   }
 }
